Fixed horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .body {
 	text-align: center;
 	margin: 0px;
